# logShield

./: .env.example  .gitignore  AI-integration.md  Dashboard.md  Final_Guide.md  Guide.md  Guide_newest.md  IoT_setup.md  LogShield.apk  Personeel.md  Posko-stok.md  README.md  Requests.md  Settings.md  logshield-ai-engine-review.md  package-lock.json  package.json  test.md
apps/ai-engine/: Dockerfile  README.md  pyproject.toml  requirements-ttm.txt  requirements.txt
apps/ai-engine/app/: __init__.py  main.py
apps/ai-engine/logshield_ai/: __init__.py  anomaly.py  api.py  artifacts.py  baseline.py  features.py  inference.py  model_schema.py  recommendation.py  schema.py  shap_explainer.py
apps/ai-engine/models/tinytimemixer/: config.json  model.safetensors  tinytimemixer_training_plan.json
apps/ai-engine/scripts/: build_recommendations.py  build_tinytimemixer_arrays.py  build_training_dataset.py  detect_anomalies.py  explain_predictions.py  predict_tinytimemixer.py  prepare_data.py  prepare_gunung_meletus_data.py  run_pipeline.py  smoke_test_artifacts.py  smoke_test_inference.py  smoke_test_training_dataset.py  train_baseline.py  train_statsforecast.py  train_tinytimemixer.py  validate_data.py
apps/ai-engine/tests/: conftest.py  test_cold_start_formulas.py  test_inference_api.py
data/: pipeline_summary.json
docs/: ai-engine-how-it-works.md  ai-refactor-plan.md  hasil-test.md  test-iot-guide.md  test-mobile-guide.md  test-ote-guide.md
infrastructure/: docker-compose.dev.yml  docker-compose.vps.full.yml  docker-compose.vps.yml  mosquitto.conf
(+108 files in other folders)
