[project]
name = "log-shield-ai-engine"
version = "0.1.0"
description = "FastAPI + statsforecast forecasting service for Log-Shield"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "statsforecast>=1.7.0",
  "pandas>=2.2.0",
  "numpy>=2.0.0",
]

[project.optional-dependencies]
xai = ["shap>=0.46.0"]
test = ["pytest>=8.0", "httpx>=0.28"]

[tool.hatch.build.targets.wheel]
packages = ["logshield_ai"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
